# csiro-biomass-prediction

./: .gitignore  CLAUDE.md  CSIRO_Biomass_Colab_Training.ipynb  NEXT_SESSION.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  metadata_baseline.yaml  vision_multimodal.yaml
data/csiro-biomass/: dataset-metadata.json
experiments/: registry.csv
notebooks/: README.md
reports/: biomass_relationships.json  biomass_relationships.md  biomass_residuals.csv  canopy_crop_stats.csv  canopy_cropping.md  dataset_audit.md  decision_report.md  duplicate_images.csv  embedding_comparison.md  embedding_cv_scores.csv  full_embedding_benchmark.md  full_embedding_cv_scores.csv  full_embedding_extraction.csv  image_analysis.md  image_feature_cv_scores.csv  image_feature_importance.csv  image_feature_target_correlations.csv  image_features.csv  image_only_strategy.md  image_to_metadata_scores.csv  inference_metadata_audit.md  kaggle_gpu_execution_plan.md  lightweight_e2e_result.json  metadata_cv_scores.csv  metadata_image_feature_cv_scores.csv  metadata_importance.md  metadata_inference_decision.md  metadata_shap_importance.csv  multicrop_biomass_scores.csv  multicrop_embedding_extraction.csv  multicrop_fusion_scores.csv  multicrop_image_to_metadata_scores.csv  multicrop_representation_benchmark.md  multimodal_benchmark.md  multimodal_cv_scores.csv  pseudo_metadata_scores.csv  raw_multicrop_fusion_scores.csv  raw_multicrop_image_to_metadata_scores.csv  research_manifest.json  target_correlations.csv  (+5 more)
scripts/: tune_and_ensemble.py
src/: __init__.py
(+37 files in other folders)
